--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,43 +2,43 @@
 
     <PreferenceCategory
         app:iconSpaceReserved="false"
-        app:summary="Recibe notificaciones de sismos de +5.0 grados"
-        app:title="Notificaciones"
+        app:summary="@string/alert_pref_summary"
+        app:title="@string/alert_pref_title"
         app:useSimpleSummaryProvider="true">
 
         <SwitchPreferenceCompat
             app:defaultValue="true"
             app:iconSpaceReserved="false"
-            app:key="pref_suscrito_quake"
-            app:summaryOff="Desactivadas"
-            app:summaryOn="Activadas"
-            app:title="Alertas de sismos"
+            app:key="@string/FIREBASE_PREF_KEY"
+            app:summaryOff="@string/alert_pref_summary_off"
+            app:summaryOn="@string/alert_pref_summary_on"
+            app:title="@string/alert_pref_title_switch"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         app:iconSpaceReserved="false"
-        app:summary="Evita tu cansancio ocular"
-        app:title="Modo noche"
+        app:summary="@string/night_mode_pref_summary"
+        app:title="@string/night_mode_pref_title"
         app:useSimpleSummaryProvider="true">
 
         <SwitchPreference
             app:defaultValue="false"
             app:iconSpaceReserved="false"
-            app:key="pref_manual_night_mode"
-            app:summaryOff="Desactivado"
-            app:summaryOn="Activado"
-            app:title="Manual"
+            app:key="@string/NIGHT_MODE_MANUAL_KEY"
+            app:summaryOff="@string/night_mode_manual_pref_summary_off"
+            app:summaryOn="@string/night_mode_manual_pref_summary_on"
+            app:title="@string/night_mode_manual_pref_title_switch"
             app:useSimpleSummaryProvider="true" />
 
         <SwitchPreference
             app:defaultValue="true"
             app:iconSpaceReserved="false"
-            app:key="pref_auto_night_mode"
-            app:summaryOff="Desactivado"
-            app:summaryOn="Activado (10pm-6am)"
-            app:title="Automático"
+            app:key="@string/NIGHT_MODE_AUTO_KEY"
+            app:summaryOff="@string/night_mode_auto_pref_summary_off"
+            app:summaryOn="@string/night_mode_auto_pref_summary_on"
+            app:title="@string/night_mode_auto_pref_title_switch"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
